Update application code and configurations

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -41,6 +41,43 @@
   "home.unknown": "Unknown",
   "home.loadFailed": "Load Failed",
   "home.loadDataFailed": "Failed to load data",
+  "home.greeting": "Hello",
+  "home.addAccount": "Add Account",
+  "home.refreshQuota": "Refresh Quota",
+  "home.geminiAvgQuota": "Gemini Avg Quota",
+  "home.geminiDrawQuota": "Gemini Draw Avg Quota",
+  "home.claudeAvgQuota": "Claude Avg Quota",
+  "home.lowQuotaAccounts": "Low Quota Accounts",
+  "home.quotaSufficient": "Sufficient",
+  "home.bestRecommend": "Best Account Recommendation",
+  "home.forGemini": "For Gemini",
+  "home.forClaude": "For Claude",
+  "home.switchToBest": "Switch to Best",
+  "home.noAvailableAccounts": "No available accounts",
+  "home.viewAllAccounts": "View All Accounts",
+  "home.exportAccounts": "Export Accounts",
+  "home.switchAccount": "Switch Account",
+  "home.quotaStats": "Quota Statistics",
+  "home.totalQuota": "Total Quota",
+  "home.usedQuota": "Used",
+  "home.remainingQuota": "Remaining",
+  "home.usageRate": "Usage Rate",
+  "home.overallProgress": "Overall Progress",
+  "home.subscriptionRemaining": "Subscription Remaining",
+  "home.status": "Status",
+  "home.minutes": "min",
+  "home.loginMethod": "Login Method",
+  "home.subscriptionType": "Subscription Type",
+  "home.originalType": "Original Type",
+  "home.upgradeable": "Upgradeable",
+  "home.overageCapability": "Overage Capability",
+  "home.baseQuota": "Base Quota",
+  "home.trialQuota": "Trial Quota",
+  "home.until": "until",
+  "home.resetDate": "Reset Date",
+  "home.usage": "Usage",
+  "home.remaining": "Remaining",
+  "home.switch": "Switch",
 
   "settings.model": "Model Settings",
   "settings.modelDesc": "Select default AI model, optionally lock to prevent changes",
