--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -41,6 +41,43 @@
   "home.unknown": "未知",
   "home.loadFailed": "加载失败",
   "home.loadDataFailed": "加载数据失败",
+  "home.greeting": "你好",
+  "home.addAccount": "添加账号",
+  "home.refreshQuota": "刷新配额",
+  "home.geminiAvgQuota": "Gemini 平均配额",
+  "home.geminiDrawQuota": "Gemini 绘图平均配额",
+  "home.claudeAvgQuota": "Claude 平均配额",
+  "home.lowQuotaAccounts": "低配额账号",
+  "home.quotaSufficient": "配额充足",
+  "home.bestRecommend": "最佳账号推荐",
+  "home.forGemini": "用于 Gemini",
+  "home.forClaude": "用于 Claude",
+  "home.switchToBest": "一键切换最佳",
+  "home.noAvailableAccounts": "暂无可用账号",
+  "home.viewAllAccounts": "查看所有账号",
+  "home.exportAccounts": "导出账号数据",
+  "home.switchAccount": "切换账号",
+  "home.quotaStats": "额度统计",
+  "home.totalQuota": "总额度",
+  "home.usedQuota": "已使用",
+  "home.remainingQuota": "剩余额度",
+  "home.usageRate": "使用率",
+  "home.overallProgress": "总体使用进度",
+  "home.subscriptionRemaining": "订阅剩余",
+  "home.status": "状态",
+  "home.minutes": "分钟",
+  "home.loginMethod": "登录方式",
+  "home.subscriptionType": "订阅类型",
+  "home.originalType": "原始类型",
+  "home.upgradeable": "可升级",
+  "home.overageCapability": "超额能力",
+  "home.baseQuota": "基础额度",
+  "home.trialQuota": "试用额度",
+  "home.until": "至",
+  "home.resetDate": "重置日期",
+  "home.usage": "使用量",
+  "home.remaining": "剩余",
+  "home.switch": "切换",
 
   "settings.title": "Kiro 设置",
   "settings.subtitle": "配置 Kiro IDE 的模型、代理等设置，修改后即时生效",
